src/app/chat/chat.component.css
h5 {
  text-align: center;
  background-color: #f8f9fa;
  margin-bottom: 0;
  padding-bottom: 1vh;
}
#top-hr {
  max-height: 1px;
}
hr {
  visibility: hidden;
}
div {
  background: #f8f9fa;
}
.pre-scrollable {
  max-height: 82vh;
}

.sent-message {
  margin-top: 1vh;
  display: inline-block;
  float: right;
  position: relative;
  margin-left: 40vw;
  margin-right: 2vw;
  background-color: peachpuff;
  color: #ffffff;
  text-align: right;
}

.received-message {
  display: inline-block;
  margin-bottom: 2vh;
  margin-left: 2vw;
  margin-right: 40vw;
  background-color: #eaeaea;
  color: #000;
}

p {
  padding-left: 0.5em;
  padding-right: 0.5em;
  padding-bottom: 0.2em;
  padding-top: 0.1em;
  position: relative;
  border-radius: 0.4em;
}

